# my_javadoc

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: log.json
resources/header/: header.css
src/: html.rs  main.rs  project.rs  project_processor.rs  repository.rs  site.rs  web.rs  zip.rs
src/multi/: mod.rs
src/project_processor/: mod.rs
templates/header/: header.html
templates/site/: index.html
